# mbx-db

./: 002_init_nocodb.sql  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/mbx_db/: __init__.py  cli.py  database.py  models.py  sync.py  timescale.py
tests/: __init__.py  test_sync.py
